Increase wrapper width to avoid mode selector wrap

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -138,7 +138,7 @@ html, body {
 }
 .wrapper {
     padding: 0 1em;
-    max-width: 1247px;
+    max-width: 1276px;
     margin: 0 auto;
 }
 div.wrapper > div > span {
